syntax = "proto3";

option java_package = "com.sudokuMaster.data";
option java_multiple_files = true;

/*message Statistics {
  int64 easy = 4;
  int64 medium = 5;
  int64 hard = 6;
}*/
enum AppTheme {
  THEME_UNSPECIFIED = 0;
  LIGHT = 1;
  DARK = 2;
  SYSTEM_DEFAULT = 3;
}

enum DifficultyLevel {
  DIFFICULTY_UNSPECIFIED = 0;
  EASY = 1;
  MEDIUM = 2;
  HARD = 3;
}

message UserPreferences {
  AppTheme appTheme = 1;
  DifficultyLevel defaultDifficulty = 2;
  bool soundEnabled = 3;
  //bool showTutorial = 5;               not implemented yet!

  int64 lastUnfinishedGameId = 6;     // not the full info just the room related id
  int64 lastAccessTimestamp = 7;
}